# small-finance-budgeting-app

./: .pre-commit-config.yaml  README.md
backend/: pyproject.toml
backend/finance_app/: forms.py  models.py  urls.py  views.py
backend/finance_app/migrations/: 0001_initial.py
backend/finance_project/: settings.py  urls.py
backend/static/: style.css
backend/templates/: base.html
backend/templates/pages/: add_transaction.html  home.html  login.html  register.html  transactions.html
